--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,16 @@
 @import './header';
 @import './footer';
 @import './landing';
+@import './card';
+@import './button';
+@import './text';
+@import './selectpicker';
+
+html,
+body {
+    position: relative;
+}
+
+body {
+    overflow-x: hidden;
+}
