--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -1,16 +1,180 @@
+// Main content
+.main-content {
+    position: relative;
+    padding: 63px 0;
+    background: url('../img/bg-main-content.png') no-repeat center bottom/100% auto;
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url('../img/bg-recommend-bottom.png') no-repeat left -38px bottom;
+        z-index: 0;
+    }
+}
+
+// Banner
+section.banner {
+    position: relative;
+    overflow-x: hidden;
+
+    >.container {
+        max-width: 760px;
+        position: relative;
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            width: 84px;
+            height: 270px;
+            background: url('../img/light-1.png') no-repeat center center/contain;
+            transform: rotate(290deg);
+            z-index: 1;
+            mix-blend-mode: screen;
+        }
+
+        &::before {
+            top: -40%;
+            right: -2%;
+        }
+
+        &::after {
+            bottom: -40%;
+            left: -2%;
+        }
+    }
+
+    .slick {
+        &-arrow {
+            position: absolute;
+            top: 50%;
+            padding: 0;
+            width: 24px;
+            height: 24px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 8px;
+            z-index: 1;
+
+            &.prev {
+                left: 30px;
+            }
+
+            &.next {
+                right: 30px;
+            }
+        }
+
+        &-dots {
+            li {
+                width: auto;
+                height: auto;
+
+                &.slick-active button {
+                    background-color: $primary;
+                }
+
+                button {
+                    width: 48px;
+                    height: 4px;
+                    padding: 0;
+                    background-color: #F6F7F0;
+                    border-radius: 4px;
+
+                    &::before {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Search
+section.search {
+    padding: calc(56px / 2) 0;
+}
+
+// Brand
+section.brand {
+    padding: calc(56px / 2) 0;
+
+    h6 {
+        @include dsn_lardphraoregular;
+    }
+
+    .brand {
+        &-content {
+            @include media-breakpoint-down(md) {
+                margin-left: -15px;
+                margin-right: -15px;
+            }
+
+            &-item {
+                text-align: center;
+                padding: 22px 0 12px;
+
+                a {
+                    display: inline-block;
+                    @include transition($transition-base);
+
+                    &:hover {
+                        filter: drop-shadow(0 0 12px $primary);
+                        @include transition($transition-base);
+                    }
+
+                    img {
+                        max-width: 100%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Recommend
+section.recommend {
+    position: relative;
+
+    .recommend {
+        &-item {
+            box-shadow: 0 3px 6px rgba(black, .16);
+            margin-bottom: 16px;
+
+            @include media-breakpoint-up(lg) {
+                margin-bottom: 60px;
+            }
+        }
+    }
+}
+
 // New car
 section.newcar {
-    .newcar {
-        &-title {
-            text-align: center;
-            font-size: 32px;
+    position: relative;
+    padding: 40px 0;
 
-            span {
-                display: block;
-                font-size: 36px;
-                @include gunship_shadow_italshadowital;
-                opacity: 0.32;
-                margin-top: -30px;
+    .bg {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: calc(100% + 50px);
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        background-size: auto;
+        z-index: 0;
+    }
+
+    .newcar {
+
+        &-content {
+            &-item {
+                padding: 0 calc(13px / 2) 35px;
             }
         }
     }
