--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -29,6 +29,11 @@
         padding-left: 16px;
         margin-bottom: 26px;
         border-left: 2px solid $primary;
+
+        .tel {
+            @include thaisans_neuebold;
+            font-size: 24px;
+        }
     }
 
     &-copyright {
