--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -1,7 +1,7 @@
 // Main content
 .main-content {
     position: relative;
-    padding: 63px 0;
+    padding: 16px 0 63px;
     background: url('../img/bg-main-content.png') no-repeat center bottom/100% auto;
     overflow-x: hidden;
 
@@ -15,6 +15,10 @@
         background: url('../img/bg-recommend-bottom.png') no-repeat left -38px bottom;
         z-index: 0;
     }
+
+    section {
+        position: relative;
+    }
 }
 
 // Banner
@@ -22,7 +26,6 @@ section.banner {
     position: relative;
 
     >.container {
-        max-width: 760px;
         position: relative;
 
         &::before,
@@ -38,13 +41,13 @@ section.banner {
         }
 
         &::before {
-            top: -40%;
-            right: -2%;
+            top: 0;
+            right: 0;
         }
 
         &::after {
-            bottom: -40%;
-            left: -2%;
+            bottom: 0;
+            left: 0;
         }
     }
 
