--- a/scss/_selectpicker.scss
+++ b/scss/_selectpicker.scss
@@ -2,7 +2,7 @@
     .dropdown {
         &-toggle {
             border-radius: 0;
-            padding: 9px 12px;
+            // padding: 9px 12px;
 
             &::after {
                 border-top-color: black;
