--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -30,3 +30,9 @@ $btn-border-width:0;
 $btn-padding-y: 4px;
 $btn-padding-x: 32px;
 $btn-font-family: 'thaisans_neuesemi_bold';
+
+// Pagination
+$pagination-bg:#12130D;
+$pagination-border-width:0;
+$pagination-hover-bg: rgba(#C6C6C6, .2);
+$pagination-hover-color: $primary;
