--- a/scss/_text.scss
+++ b/scss/_text.scss
@@ -20,4 +20,11 @@
             margin-top: -30px;
         }
     }
+
+    p {
+        color: white;
+        @include dsn_lardphraoregular;
+        font-size: 20px;
+
+    }
 }
