--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -1,7 +1,8 @@
 // Main content
 .main-content {
     position: relative;
-    padding: 16px 0 63px;
+    padding: 0 0 63px;
+    background-color: $body-bg;
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
