--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,10 +19,31 @@ body {
 }
 
 main {
-    background: #000 url('../img/bg-main-mobile.jpg') no-repeat center top/100% auto;
+    background: #000 url('../img/bg-main.png') no-repeat center top/100% auto;
+    position: relative;
 
+    .bg-main {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: url('../img/bg-light.png') no-repeat center top/auto;
+        mix-blend-mode: screen;
+        opacity: 0.5;
 
-    @include media-breakpoint-up(lg) {
-        background: #000 url('../img/bg-main.jpg') no-repeat center top/100% auto;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+            background: #000 url('../img/bg-light-2.png') no-repeat center 65%/100% auto;
+            mix-blend-mode: screen;
+            opacity: 0.38;
+        }
     }
 }
