--- a/motorsimport/scss/intro.scss
+++ b/motorsimport/scss/intro.scss
@@ -4,15 +4,18 @@
 @import './button';
 
 #intro {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     section {
-        height: 50vh;
+        height: 50%;
         display: flex;
-        align-items: center;
         justify-content: center;
+        align-items: center;
         position: relative;
         overflow: hidden;
+
 
         .bg {
             position: absolute;
